fixed spacing

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@
 
 th,
 td {
-    padding: 7px;
+    padding: 5px;
 }
 
 @font-face {
